--- a/post-1.html
+++ b/post-1.html
@@ -91,7 +91,7 @@
           </p>
           <h2>CODE</h2>
           <script src="https://gist.github.com/kumarsatish23/36110955ba142defbe31f368a9cc8cfa.js"></script>
-          <iframe width="100%" height="75%" src="https://www.youtube.com/embed/GfukUaf7y_4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe width="100%" height="400" src="https://www.youtube.com/embed/GfukUaf7y_4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <p class="author"><a  href="https://kumarsatish23.github.io/My-Portfolio/" target="_blank">Satish kumar<a></p>
         </div>
       </article>
