--- a/post-2.html
+++ b/post-2.html
@@ -92,7 +92,7 @@
             </p>
             <h2>CODE</h2>
             <script src="https://gist.github.com/kumarsatish23/8e1bb0aa4fb763c9617e7f08072d2291.js"></script>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/5qh9OB0B_F4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/5qh9OB0B_F4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <p class="author"><a  href="https://kumarsatish23.github.io/My-Portfolio/" target="_blank">Satish kumar<a></p>
           </div>
         </article>
