--- a/post-3.html
+++ b/post-3.html
@@ -117,7 +117,7 @@ The Hitachi-compatible LCDs can be controlled in two modes: 4-bit or 8-bit. The 
                      </p>
                      <h2>CODE</h2>
                     <script src="https://gist.github.com/kumarsatish23/e2318cad20cba7ce8b9c8730d5279abf.js"></script>
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/85LvW1QDLLw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/85LvW1QDLLw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                      <p class="author"><a  href="https://kumarsatish23.github.io/My-Portfolio/" target="_blank">Satish kumar<a></p>
                   </div>
                </article>
