--- a/post-4.html
+++ b/post-4.html
@@ -97,7 +97,7 @@
                     </p>
                     <h2>CODE</h2>
                     <script src="https://gist.github.com/kumarsatish23/ef914bebdc7f89d2c83ad923950862c5.js"></script>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VPGRqML_v0w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/VPGRqML_v0w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     <p class="author"><a  href="https://kumarsatish23.github.io/My-Portfolio/" target="_blank">Satish kumar<a></p>
                   </div>
                 </article>
